--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,12 @@
             <div id="cabecera">
         </div>
         <div id="post">
-        <h1>Este es el título atractivo e interesante del post</h1>
-        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        <h1>Este es el título atractivo e interesante 
+            del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a 
+            explicar las cosas increibles que se pueden 
+            hacer con ramas</p>
+        <p>Esto es una prueba de que de los errores es 
+            que realmente se aprende.</p>
     </body>
 </html>
