--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza
+                <span id="tagline">Tu blog de maestro
                 </span>
             </div>
             <div id="post">
@@ -15,7 +15,8 @@
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejora forma de compartir información y tus ideas. Muchos más que ir a conferencias o salir en Youtube. 
                 Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora.</p>
-            <p>Suscribete y dale like</p>
+            <p>Suscribete</p>
+            <p>Si te gustó dale like</p>
             </div>
         </div>
     </body>
